pov-check-health (0.9.0) UNRELEASED; urgency=medium

  * Fixed most shellcheck warnings.  This should've improved reliablility
    (especially if you have file or directory names with spaces in them), but
    might've introduced bugs.
  * New checks: checkcert, checkcert_imaps, checkcert_ssmtp.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 19 Aug 2015 09:30:36 +0300

pov-check-health (0.8.3) precise; urgency=medium

  * check-health -g: require 1G free disk space for partitions that have more
    than 1G free.

 -- Marius Gedminas <marius@gedmin.as>  Tue, 21 Apr 2015 13:20:15 +0300

pov-check-health (0.8.2) precise; urgency=medium

  * checkpidfile: handle multiple PIDs in one file (GH #4).

 -- Marius Gedminas <marius@gedmin.as>  Fri, 27 Mar 2015 10:50:07 +0200

pov-check-health (0.8.1) precise; urgency=medium

  * New check: checkweb_auth.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 19 Feb 2015 14:04:41 +0200

pov-check-health (0.8.0) precise; urgency=medium

  * check-virtualenvs:
    - colorize output,
    - don't check symlinks,
    - do check venv/bin/python[23],
    - improve multi-Python version virtualenv handling.
  * check-web-health: new script.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 19 Feb 2015 13:07:28 +0200

pov-check-health (0.7.0) precise; urgency=medium

  * functions.sh: use printf instead of echo for portability (GH #3).
  * check-virtualenvs:
    - new option -h to show help,
    - new option -f to fix the virtualenvs,
    - handle multi-python virtualenvs better,
    - ignore /usr/lib/debug/usr/lib/python*,
    - skip full Python installations.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 24 Oct 2014 12:25:40 +0300

pov-check-health (0.6.4) precise; urgency=medium

  * checkswap: mention units in warning message (GH #1).
  * checkmailq: fix postfix mailq parsing (GH #2).

 -- Marius Gedminas <marius@gedmin.as>  Wed, 17 Sep 2014 08:22:54 +0300

pov-check-health (0.6.3) precise; urgency=medium
