@@ -1,0 +1,66 @@
+#!/bin/sh
+
+PATH=/usr/sbin:/usr/bin:/sbin:/bin
+export PATH
+
+usage="Usage: check-ssl-certs [-v] [-f configfile]
+       check-ssl-certs -h"
+
+verbose=0
+generate=0
+configfile=/etc/pov/check-ssl-certs
+
+libdir=.
+
+while getopts hvgf: OPT; do
+    case "$OPT" in
+        v)
+            verbose=1
+            ;;
+        h)
+            echo "$usage"
+            exit 0
+            ;;
+        g)
+            echo "$0: generation is not supported yet" 1>&2
+            exit 1
+            generate=1
+            ;;
+        f)
+            configfile=$OPTARG
+            ;;
+        *)
+            echo "$usage" 1>&2
+            exit 1
+            ;;
+    esac
+done
+
+shift $((OPTIND - 1))
+
+if [ $# -ne 0 ]; then
+    echo "$usage" 1>&2
+    exit 1
+fi
+
+if [ $generate -ne 0 ]; then
+    . $libdir/generate.sh
+    emit "#
+# SSL certificate checks for $(hostname -f)
+#
+# Generated by pov-check-health on $(date +"%Y-%m-%d %H:%M:%S")
+#"
+    generate_checkcert
+    exit 0
+fi
+
+. $libdir/functions.sh || exit 1
+
+if ! [ -f "$configfile" ]; then
+    info "not performing any checks: $configfile doesn't exist"
+    exit 0
+fi
+
+. "$configfile"
+
+exit 0
