@@ -8,7 +8,10 @@ a new config file.  Edit to adjust to your local needs.  Run
 For website checks, run 'check-web-health -g > /etc/pov/check-web-health'
 to generate a config file, edit, run 'check-web-health' to test.
 
+For SSL certificate checks, edit /etc/pov/check-ssl-certs by hand.  Run
+'check-ssl-certs -v' to test.
+
 The cron script is enabled automatically (see /etc/cron.d/pov-check-health
 for scheduling details) but does nothing if the config files are missing.
 
- -- Marius Gedminas <marius@pov.lt>  Thu, 19 Feb 2015 13:29:48 +0300
+ -- Marius Gedminas <marius@pov.lt>  Thu, 19 Aug 2015 10:17:48 +0300
